@@ -1,0 +1,22 @@
+package org.openxava.web.servlets;
+
+import java.io.*;
+
+import javax.servlet.*;
+import javax.servlet.annotation.*;
+import javax.servlet.http.*;
+
+/**
+ * tmr
+ * 
+ * @since 7.1
+ * @author Javier Paniza
+ */
+@WebServlet({"/m/.htaccess", "/dwr/call/plaincall/.htaccess"})
+public class NotFoundServlet extends HttpServlet {
+	
+	protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+		resp.sendError(HttpServletResponse.SC_NOT_FOUND);
+	}
+
+}
